# robot_sensor_hub

./: .gitignore  README.md  cooling_controller.py  platformio.ini  run_docker.sh
docker/: Dockerfile  docker-compose.yml
docker/scripts/: entrypoint.sh
firmware/: CMakeLists.txt  finalize_micro_ros.sh  generate_msgs.sh  sdkconfig  sdkconfig.old
firmware/main/: main.c
firmware/main/sensors/: aht30_reader.c  aht30_reader.h  fan_controller.c
include/: config.h
robot_sensor_hub/: CMakeLists.txt  sdkconfig  sdkconfig.old  update_libmicroros.sh
robot_sensor_hub/main/: CMakeLists.txt  idf_component.yml  main.c
robot_sensor_hub/main/sensors/: aht30_reader.c  fan_controller.c  fan_controller.h  hx711_reader.c  hx711_reader.h
robot_sensor_hub_msg/: CMakeLists.txt  package.xml
robot_sensor_hub_msg/msg/: DeviceCommand.msg  DeviceData.msg  SensorReading.msg  SystemMeta.msg  SystemSnapshot.msg
src/: main.cpp
src/ros/: publishers.cpp  subscribers.cpp
src/sensors/: aht30_reader.cpp  fan_controller.cpp  hx711_reader.cpp
