<?xml version="1.0"?>
<package format="3">
  <name>robot_sensor_hub_msg</name>
  <version>0.0.0</version>
  <description>Custom messages for Robot Sensor Hub</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_generator_c</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- КРИТИЧЕСКИЙ ТЕГ для генерации .msg -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>